# uweather-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
app/src/apps/users/: serializers.py  views.py
app/src/config/: db.py
app/src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile
nginx-conf/: nginx.conf
nginx-conf/vhost.d/: default
src/: __init__.py  celery.py  settings.py  urls.py
src/apps/locations/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
src/apps/locations/migrations/: 0001_initial.py
src/apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/config/: base.py  db.py  redis.py
src/core/: __init__.py  asgi.py  settings.py  wsgi.py
src/tests/: conftest.py
tests/: conftest.py
tests/fixtures/: locations.json  users.json
tests/locations/: test_api.py  test_services.py
