[project]
name = "uweather-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-rest-auth>=7.0.0",
    "django-cors-headers>=4.6.0",
    "django>=5.1.3",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "httpx>=0.27.2",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "ruff>=0.7.4",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "django-silk>=5.3.2",
    "hiredis>=3.1.0",
    "gunicorn>=23.0.0",
]

